Extract Maven downloader from `HazelcastVersionLocator`, use this to download (or more specifically, access cached resources) for the classloader tests.